<resources>
    <string name="app_name">Approve</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display"></string>
    <string name="title_activity_create_contract">New Contract</string>
    <string name="title_activity_display_contract_list">Display Contract List</string>
    <string name="title_activity_display_contract_to_be_approved">Pending Inbox</string>
    <string name="title_activity_approve">Approve</string>
    <string name="title_activity_reject_contract">Reject Contract</string>
    <string name="title_activity_display_sent_contract">Pending Outbox</string>
    <string name="title_activity_display_approved_contract">Display Approved Contract</string>
    <string name="title_activity_display_rejected_contract">Display Rejected Contract</string>
    <string name="title_activity_play_video">Play Video</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_send">Send</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_compose_contract">Compose Contract</string>
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        
        <item>Inbox</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
        <item>Outbox</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_verify_signature">VerifySignatureActivity</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="slogan">Your Agreement Assistant</string>
    <string name="password">Password</string>
    <string name="username">Username (Email Address)</string>
    <string name="name">Name</string>
    <string name="nric">NRIC/FIN</string>
    <string name="phone">Mobile Phone No.</string>
    <string name="password2">Confirm Password</string>
    <string name="prepare_video">Prepare Video</string>
    <string name="continue_task">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="prepare_justification">Prepare Justification</string>
    <string name="search">Search</string>
    <string name="Uneditable">uneditable</string>
    <string-array name="country_codes">
        <item>AD</item>
        <item>AE</item>
        <item>AF</item>
        <item>AL</item>
        <item>AM</item>
        <item>AO</item>
        <item>AQ</item>
        <item>AR</item>
        <item>AT</item>
        <item>AU</item>
        <item>AW</item>
        <item>AZ</item>
        <item>BA</item>
        <item>BD</item>
        <item>BE</item>
        <item>BF</item>
        <item>BG</item>
        <item>BH</item>
        <item>BI</item>
        <item>BJ</item>
        <item>BL</item>
        <item>BN</item>
        <item>BO</item>
        <item>BR</item>
        <item>BT</item>
        <item>BW</item>
        <item>BY</item>
        <item>BZ</item>
        <item>CA</item>
        <item>CC</item>
        <item>CD</item>
        <item>CF</item>
        <item>CG</item>
        <item>CH</item>
        <item>CI</item>
        <item>CK</item>
        <item>CL</item>
        <item>CM</item>
        <item>CN</item>
        <item>CO</item>
        <item>CR</item>
        <item>CU</item>
        <item>CV</item>
        <item>CX</item>
        <item>CY</item>
        <item>CZ</item>
        <item>DE</item>
        <item>DJ</item>
        <item>DK</item>
        <item>DZ</item>
        <item>EC</item>
        <item>EE</item>
        <item>EG</item>
        <item>ER</item>
        <item>ES</item>
        <item>ET</item>
        <item>FI</item>
        <item>FJ</item>
        <item>FK</item>
        <item>FM</item>
        <item>FO</item>
        <item>FR</item>
        <item>GA</item>
        <item>GB</item>
        <item>GE</item>
        <item>GH</item>
        <item>GI</item>
        <item>GL</item>
        <item>GM</item>
        <item>GN</item>
        <item>GQ</item>
        <item>GR</item>
        <item>GT</item>
        <item>GW</item>
        <item>GY</item>
        <item>HK</item>
        <item>HN</item>
        <item>HR</item>
        <item>HT</item>
        <item>HU</item>
        <item>ID</item>
        <item>IE</item>
        <item>IL</item>
        <item>IM</item>
        <item>IN</item>
        <item>IQ</item>
        <item>IR</item>
        <item>IT</item>
        <item>JO</item>
        <item>JP</item>
        <item>KE</item>
        <item>KG</item>
        <item>KH</item>
        <item>KI</item>
        <item>KM</item>
        <item>KP</item>
        <item>KR</item>
        <item>KW</item>
        <item>KZ</item>
        <item>LA</item>
        <item>LB</item>
        <item>LI</item>
        <item>LK</item>
        <item>LR</item>
        <item>LS</item>
        <item>LT</item>
        <item>LU</item>
        <item>LV</item>
        <item>LY</item>
        <item>MA</item>
        <item>MC</item>
        <item>MD</item>
        <item>ME</item>
        <item>MG</item>
        <item>MH</item>
        <item>MK</item>
        <item>ML</item>
        <item>MM</item>
        <item>MN</item>
        <item>MO</item>
        <item>MR</item>
        <item>MT</item>
        <item>MU</item>
        <item>MV</item>
        <item>MW</item>
        <item>MX</item>
        <item>MY</item>
        <item>MZ</item>
        <item>NA</item>
        <item>NC</item>
        <item>NE</item>
        <item>NG</item>
        <item>NI</item>
        <item>NL</item>
        <item>NO</item>
        <item>NP</item>
        <item>NR</item>
        <item>NU</item>
        <item>NZ</item>
        <item>OM</item>
        <item>PA</item>
        <item>PE</item>
        <item>PF</item>
        <item>PG</item>
        <item>PH</item>
        <item>PK</item>
        <item>PL</item>
        <item>PM</item>
        <item>PN</item>
        <item>PR</item>
        <item>PT</item>
        <item>PW</item>
        <item>PY</item>
        <item>QA</item>
        <item>RO</item>
        <item>RS</item>
        <item>RU</item>
        <item>RW</item>
        <item>SA</item>
        <item>SB</item>
        <item>SC</item>
        <item>SD</item>
        <item>SE</item>
        <item>SG</item>
        <item>SH</item>
        <item>SI</item>
        <item>SK</item>
        <item>SL</item>
        <item>SM</item>
        <item>SN</item>
        <item>SO</item>
        <item>SR</item>
        <item>ST</item>
        <item>SV</item>
        <item>SY</item>
        <item>SZ</item>
        <item>TD</item>
        <item>TG</item>
        <item>TH</item>
        <item>TJ</item>
        <item>TK</item>
        <item>TL</item>
        <item>TM</item>
        <item>TN</item>
        <item>TO</item>
        <item>TR</item>
        <item>TV</item>
        <item>TW</item>
        <item>TZ</item>
        <item>UA</item>
        <item>UG</item>
        <item>US</item>
        <item>UY</item>
        <item>UZ</item>
        <item>VA</item>
        <item>VE</item>
        <item>VN</item>
        <item>VU</item>
        <item>WF</item>
        <item>WS</item>
        <item>YE</item>
        <item>YT</item>
        <item>ZA</item>
        <item>ZM</item>
        <item>ZW</item>
    </string-array>
</resources>