<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/app_name"
        android:id="@+id/TVLogo"
        android:layout_marginTop="140dp"
        android:textSize="60sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_2"
        android:text="@string/slogan"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/signup"
        android:textColor="@color/theme"
        android:textAllCaps="false"
        android:background="@drawable/background_signup_button"
        android:textStyle="bold"
        android:id="@+id/BSignup" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/theme_2"
        android:text="Already have an Approve account?"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textColor="@color/theme_2"
        android:background="@drawable/background_login_button"
        android:textStyle="bold"
        android:id="@+id/BLogin" />

    </LinearLayout>