<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="#FFFFFF"
                android:text="@string/app_name"
                android:id="@+id/TVLogo"
                android:textSize="40sp"
                android:gravity="center|center_vertical|center_horizontal"
                android:layout_alignTop="@id/toolbar"
                android:layout_alignBottom="@id/toolbar"
                android:scaleType="fitXY"/>

        </RelativeLayout>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_below="@id/header">


            <ImageView
                android:id="@+id/IVSignature"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_action_capture"
                android:background="@drawable/background_login_button"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/TFName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="3dp"
                android:background="@drawable/background_alertdialog"
                android:fontFamily="helveticaneue"
                android:textSize="12sp"
                android:hint="@string/name" />


            <EditText
                android:id="@+id/TFNRIC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="3dp"
                android:background="@drawable/background_alertdialog"
                android:fontFamily="helveticaneue"
                android:textSize="12sp"
                android:singleLine="true"
                android:hint="@string/nric" />



            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginRight="4dp"
                    android:textSize="12sp"
                    android:text="+65 (SG)"
                    android:background="@drawable/background_alertdialog"
                    android:fontFamily="helveticaneue"
                    android:textStyle="bold"
                    android:onClick="onCountryCode"/>

                <EditText
                    android:id="@+id/TFPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:background="@drawable/background_alertdialog"
                    android:fontFamily="helveticaneue"
                    android:textSize="12sp"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:singleLine="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/BCountryCode"
                    android:layout_toEndOf="@+id/BCountryCode" />

            </RelativeLayout>

            <EditText
                android:id="@+id/TFUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="3dp"
                android:background="@drawable/background_alertdialog"
                android:fontFamily="helveticaneue"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:hint="@string/username" />


            <EditText
                android:id="@+id/TFPassword1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="3dp"
                android:background="@drawable/background_alertdialog"
                android:fontFamily="helveticaneue"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password" />



            <EditText
                android:id="@+id/TFPassword2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="3dp"
                android:background="@drawable/background_alertdialog"
                android:fontFamily="helveticaneue"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password2" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:textAllCaps="false"
                android:text="@string/signup"
                android:textColor="@color/text_white"
                android:background="@drawable/background_change_button"
                android:textStyle="bold"
                android:id="@+id/BSignup" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>