<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/TFUsername"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_alertdialog"
        android:fontFamily="helveticaneue"
        android:textSize="12sp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/TFPassword"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_margin="3dp"
        android:background="@drawable/background_alertdialog"
        android:fontFamily="helveticaneue"
        android:textSize="12sp"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/background_cancel_button"
            android:text="Cancel"
            android:fontFamily="helveticaneue"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_margin="6dp"
            android:id="@+id/BCancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/background_change_button"
            android:textColor="#FFFFFF"
            android:text="@string/login"
            android:fontFamily="helveticaneue"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_margin="6dp"
            android:id="@+id/BLogin" />

    </LinearLayout>
</LinearLayout>